# RenderLab

./: .gitignore  CMakeLists.txt  build_bullet.bat  build_opengex.bat
Asset/: linker-error.txt  shader_error.txt
Asset/Scene/: area_light.ogex  c.ogex  shadow_map.ogex  splash.ogex  sun_light.ogex  sun_light2.ogex  water.blend  water.ogex
Asset/Shaders/: basic.ps  basic.vs  basic_ps.glsl  basic_vs.glsl  cbuffer.glsl  debug_ps.glsl  debug_vs.glsl  depthcubemap_ps.glsl  depthtexture_ps.glsl  depthtexture_vs.glsl  passthrough_cuebe_vs.glsl  passthrough_ps.glsl  passthrough_vs.glsl  shadowmap_omni_gs.glsl  shadowmap_omni_ps.glsl  shadowmap_omni_vs.glsl  shadowmap_ps.glsl  shadowmap_vs.glsl  simple.hlsl.ps  simple.hlsl.vs  sky_box_ps.glsl  sky_box_vs.glsl  water_ps.glsl  water_vs.glsl  基础光照着色 (2).glsl
Empty/: EmptyApplication.cpp
Framework/: CMakeLists.txt
Framework/Algorism/: Tree.hpp
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  BaseSceneNode.cpp  BaseSceneNode.hpp  BaseSceneObject.hpp  Buffer.hpp  BulletPhysicsManager.cpp  BulletPhysicsManager.hpp  CMakeLists.txt  DebugManager.cpp  DebugManager.hpp  Engine.cpp  Engine.hpp  ForwardRenderPass.cpp  ForwardRenderPass.hpp  GameLogic.cpp  GameLogic.hpp  GeomMath.hpp  GfxConfiguration.hpp  GfxStructures.hpp  GraphicsManager.cpp  GraphicsManager.hpp  HUDPass.cpp  HUDPass.hpp  IApplication.hpp  IDrawPass.hpp  IPhysicsManager.hpp  IRuntimeModule.hpp  IShaderManager.hpp  Image.hpp  ImageParser.cpp  ImageParser.hpp  InputManager.cpp  InputManager.hpp  OGEX.hpp  PhysicsManager.cpp  PhysicsManager.hpp  ResLoader.hpp  Scene.cpp  Scene.hpp  (+27 more)
Framework/DrawPass/: CMakeLists.txt  ForwardRenderPass.cpp  ForwardRenderPass.hpp  HUDPass.cpp  HUDPass.hpp  ShadowMapPass.cpp  ShadowMapPass.hpp
Framework/Geometries/: Box.cpp  Box.hpp  CMakeLists.txt  Geometry.cpp  Geometry.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
Framework/Utils/: CMakeLists.txt  FileHandle.hpp  FileUtils.cpp  FileUtils.hpp  Singleton.hpp  StringUtils.hpp
Game/: CMakeLists.txt
Game/AreaLight/: AreaLightGameConfig.cpp  AreaLightGameLogic.cpp  AreaLightGameLogic.hpp  CMakeLists.txt
Game/Billiard/: BilliardGameConfig.cpp  BilliardGameLogic.cpp  BilliardGameLogic.hpp  CMakeLists.txt
Game/ShadowMap/: CMakeLists.txt  ShadowMapGameConfig.cpp  ShadowMapGameLogic.cpp  ShadowMapGameLogic.hpp
Game/SpotLight/: CMakeLists.txt  SpotLightGameConfig.cpp  SpotLightGameLogic.cpp  SpotLightGameLogic.hpp
Game/SunLight/: CMakeLists.txt  SunLightGameConfig.cpp
Game/SunLight - 副本/: SunLightGameLogic.cpp  SunLightGameLogic.hpp
Game/Water/: CMakeLists.txt  WaterGameConfig.cpp  WaterGameLogic.cpp  WaterGameLogic.hpp
Game/article_41/: CMakeLists.txt  article_41_config.cpp  article_41_game_logic.cpp  article_41_game_logic.hpp
Physics/Bullet/: BulletPhysicsManager.cpp  BulletPhysicsManager.hpp  CMakeLists.txt
Physics/My/: CMakeLists.txt  MotionState.hpp  MyPhysicsManager.cpp  MyPhysicsManager.hpp  RigidBody.hpp
Platform/: CMakeLists.txt
Platform/GLFW/: CMakeLists.txt  GLFWApplication.cpp  GLFWApplication.hpp  OpenGLApplication.cpp
Platform/Windows/: CMakeLists.txt  WindowsApplication.cpp  WindowsApplication.hpp
Platform/Windows/OpenGL/: CMakeLists.txt  OpenGLApplication.cpp  OpenGLApplication.hpp
RHI/D3d/: CMakeLists.txt  DirectX12GraphicsManager.cpp  DirectX12GraphicsManager.hpp
RHI/OpenGL/: CMakeLists.txt  OpenGLESGraphicsManager.cpp  OpenGLESGraphicsManager.hpp  OpenGLESSshaderManager.cpp  OpenGLESSshaderManager.hpp  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp  OpenGLGraphicsManagerCommonBase.cpp  OpenGLGraphicsManagerCommonBase.hpp  OpenGLShaderManager.cpp  OpenGLShaderManager.hpp  OpenGLShaderManagerCommonBase.cpp  OpenGLShaderManagerCommonBase.hpp
Test/: CMakeLists.txt
Test/BulletTest/: BulletTest.cpp  CMakeLists.txt
Test/HelloD3D/: CMakeLists.txt  HelloD3D.cpp
Test/HelloGLFW/: CMakeLists.txt  HelloGLFW.cpp  color.ps  color.vs
Test/HelloOpenGL/: CMakeLists.txt  HelloOpenGL.cpp
